pedro_respaldiza/session4/ab.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-test-container
  name: kube-test-container
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kube-test-container
  template:
    metadata:
      labels:
        app: kube-test-container
    spec:
      containers:
      - name: kube-test-container
        image: sverrirab/kube-test-container:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 50m
            memory: 5Mi
          requests:
            cpu: 10m
            memory: 1Mi
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kube-test-container
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: kube-test-container
  type: ClusterIP
