pedro_respaldiza/session4/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: exercise
  labels:
    app: wordpress
    type: frontend
spec:
  selector:
    app: wordpress
    type: frontend
  ports:
  - name: http-sv-port 
    port: 80
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:latest
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
